fixing links and alignments

--- a/css/index.css
+++ b/css/index.css
@@ -266,7 +266,7 @@ h3:hover {
     border-radius: 5px;
     text-decoration: none;
     display: inline-block;
-    margin-top: 5px;
+    margin-top: -5px;
     transition: background-color 0.3s ease;
 }
 
